test/error/undefined_macro.sv
// pattern: Undefined macro: SOMETHING
`SOMETHING
module top;
endmodule
